name:           FCommandD
version:        0.0.1
cabal-version:  -any
build-type:     Simple
license:        AllRightsReserved
build-depends:  base -any, binary -any, bindings-DSL -any, bytestring -any, 
                bytestring-lexing >= 0.3.0, containers -any, directory -any,
                dbus-core >= 0.9.2.1, haskell98 -any, hinotify >= 0.3.2, ioctl -any, 
                network -any, parsec -any,
                time -any, transformers -any, unix == 2.5.0.0
description:    .
author:         tux_mark_5
executable:     FCommandD
main-is:        Main.hs
buildable:      True
hs-source-dirs: src
ghc-options:    -threaded
other-modules:  System.Linux.Input
                System.Linux.Keys
                System.Linux.UInput
                
